# VideoCreator

./: .gitignore  README.md  package-lock.json  package.json
builder/: .gitignore  Cargo.toml
builder/src/: filter.rs  job.rs  main.rs
src/: PageManager.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/builder/: filter.rs  job.rs  mod.rs  process.rs
src-tauri/src/services/storage/models/: assets.rs  mod.rs  project.rs  template.rs
src-tauri/src/services/storage/models/medias/: audio.rs  clip.rs  image.rs  mod.rs  video.rs
src-tauri/src/services/storage/models/utils/file_ext/: aud.in  img.in  vid.in
src/components/SideDrawer/: index.css  index.tsx
src/pages/: Dashboard.tsx  Editor.tsx  Projects.tsx  index.ts
src/pages/layouts/: NotFound.tsx  StaticLayout.tsx
src/pages/styles/: StaticLayout.css  page.css
