# builder/Cargo.toml
[package]
name = "builder"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
rayon = "1.9"
# petite aide pour construire les commandes (facultatif)
duct = "0.13"